--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
-     <h1>Minha página pessoal</h1>
+     <h1>Minha página inicial</h1>
 </body>
 </html>
